--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,19 +2,17 @@ name: supper_route
 description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
-
+#required
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.13.0 <3.0.0"
 
 dependencies:
-  build: ^2.0.2 # <-- Add this line
   flutter:
     sdk: flutter
   source_gen: '>=0.8.0'
   cupertino_icons: ^1.0.3
 
 dev_dependencies:
-  build_config: ^1.0.0 # <-- And this line
   build_runner: ^2.0.4 # <-- And this line
   flutter_test:
     sdk: flutter
