readme.md and build.yaml fixed

--- a/build.yaml
+++ b/build.yaml
@@ -3,9 +3,8 @@ targets:
     builders:
       supper_route|supper_route_builder:
         generate_for:
-          enabled: true
           include:
-            - lib/main/**.dart
+            - lib/main/main.dart
 
 builders:
   supper_route_builder:
